[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probkit"
dynamic = ["version"]
description = "Toolkit for modifying probabilities and shaping curves."
authors = [{name="Taylor Vance", email="mirrors.cities0w@icloud.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["probability", "curves", "sigmoid", "mathematics", "simulation", "statistics"]
dependencies = []

[project.urls]
Homepage = "https://github.com/taylorvance/probkit"
Repository = "https://github.com/taylorvance/probkit"
Issues = "https://github.com/taylorvance/probkit/issues"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["probkit*"]
exclude = ["tests*"]
